--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div id="quote-box">
             <p class="quote">Never underestimate the power of dreams and the influence of the human spirit. We are all the same in this notion. The potential for greatness lives within each of us.</p>
-            <p class="source">Wilma Rudolph, Three-Time Olympic Gold Champe<span class="citation"></span><span class="year">1940-1994</span></p>
+            <p class="source">Wilma Rudolph, Three-Time Olympic Gold Champ<span class="citation"></span><span class="year">1940-1994</span></p>
         </div>
 
         <button id="loadQuote">Show another quote</button>
