--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body id="bgcolor">
     <div class="container">
 
         <div id="quote-box">
             <p class="quote">Never underestimate the power of dreams and the influence of the human spirit. We are all the same in this notion. The potential for greatness lives within each of us.</p>
-            <p class="source">Wilma Rudolph, Three-Time Olympic Gold Champ<span class="citation"></span><span class="year">1940-1994</span></p>
+            <p class="source">Wilma Rudolph, Three-Time Olympic Gold Champ<span class="type"></span><span class="year">1940-1994</span></p><span class="citation"></span>
         </div>
 
         <button id="loadQuote">Show another quote</button>
